styles/core/_reset.scss
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  @extend %Poppins;
  line-height: 1;
  color: #fff;
}

main {
  @extend %Poppins;
  color: #fff;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

button {
  background: transparent;
  border: 0;
  padding: 0;
  font-family: inherit;
  color: #0d0d0d;
}

a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-property: opacity, color, background-color,
    -webkit-transform, border;
  -webkit-transition-property: opacity, color, background-color, transform,
    border;
  transition-property: opacity, color, background-color, transform, border;
  font-family: inherit;
}

*,
*:before,
*:after {
  box-sizing: border-box;
  outline: none;
  -webkit-touch-callout: none;
  scroll-behavior: smooth;
}

a {
  color: inherit;
  text-decoration: none;
}

ol,
ul {
  list-style: none;
}

strong {
  font-weight: bolder;
}

::selection {
  background: #111827;
  color: #cbd5e1;
}

